--- a/src/classes/BoxUploadEmail.cls
+++ b/src/classes/BoxUploadEmail.cls
@@ -1,5 +1,15 @@
+/**
+ * Represents an email address that can be used to upload files to a folder on Box.
+ */
+
 public class BoxUploadEmail extends BoxResource {
 
+    /**
+     * Constructs a BoxUploadEmail for an item with a given ID.
+     *
+     * @param  api the API connection to be used by the item.
+     * @param  id  the ID of the item.
+     */
     public BoxUploadEmail(BoxApiConnection api, String id) {
         super(api, id);
     }
@@ -12,20 +22,43 @@ public class BoxUploadEmail extends BoxResource {
         this.information = (BoxUploadEmail.Info) jsonObject;
     }
 
+    /**
+     * Info about BoxUploadEmail
+     */
     public class Info extends BoxResource.Info {
 
         public BoxUploadEmail.Access access {get; private set;}
         public String email {get; private set;}
-        public Info() { 
+
+        /**
+         * Constructs an empty Info object.
+         */
+        public Info() {
             super();
         }
 
+        /**
+         * Constructs an Info object by parsing information from a JSON string.
+         *
+         * @param  json the JSON string to parse.
+         */
         public Info(String jsonString) {
             super(jsonString);
+            for (String key : this.children.keySet()) {
+                this.parseMember(key, this.children.get(key));
+            }
         }
 
+        /**
+         * Constructs an Info object using an already parsed JSON object.
+         *
+         * @param  jsonObject the parsed JSON object.
+         */
         public Info(BoxJsonObject jsonObject) {
             super(jsonObject);
+            for (String key : this.children.keySet()) {
+                this.parseMember(key, this.children.get(key));
+            }
         }
 
         public override void addValue(String key, String value) {
@@ -52,6 +85,9 @@ public class BoxUploadEmail extends BoxResource {
         }
     }
 
+    /**
+     * Enumerates the possible access levels that can be set on an upload email.
+     */
     public enum Access {
         /**
          * Anyone can send an upload to this email address.
